--- a/src/mdtserialport/mdtSerialPortConfigWidget.ui
+++ b/src/mdtserialport/mdtSerialPortConfigWidget.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>446</width>
-    <height>205</height>
+    <width>397</width>
+    <height>198</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -80,14 +80,14 @@
       <item>
        <widget class="QRadioButton" name="rbStopBit2">
         <property name="text">
-         <string>6</string>
+         <string>2</string>
         </property>
        </widget>
       </item>
      </layout>
     </widget>
    </item>
-   <item row="1" column="2" rowspan="2">
+   <item row="1" column="2">
     <widget class="QGroupBox" name="gbParity">
      <property name="title">
       <string>Parity</string>
