--- a/src/mdtport/mdtPortConfigWidget.ui
+++ b/src/mdtport/mdtPortConfigWidget.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>514</width>
-    <height>225</height>
+    <width>471</width>
+    <height>249</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -70,7 +70,14 @@
      </property>
     </spacer>
    </item>
-   <item row="2" column="0" colspan="3">
+   <item row="2" column="0" colspan="2">
+    <widget class="QCheckBox" name="cbReadOnly">
+     <property name="text">
+      <string>Read only</string>
+     </property>
+    </widget>
+   </item>
+   <item row="3" column="0" colspan="3">
     <layout class="QHBoxLayout" name="horizontalLayout">
      <item>
       <widget class="QGroupBox" name="gbReadOptions">
@@ -192,16 +199,6 @@
           </property>
          </widget>
         </item>
-        <item row="3" column="0">
-         <widget class="QLabel" name="lbWriteMinWaitTime">
-          <property name="text">
-           <string>Wait time [ms]</string>
-          </property>
-          <property name="buddy">
-           <cstring>sbWriteMinWaitTime</cstring>
-          </property>
-         </widget>
-        </item>
         <item row="3" column="1">
          <widget class="QSpinBox" name="sbWriteMinWaitTime">
           <property name="toolTip">
@@ -209,6 +206,16 @@
           </property>
           <property name="maximum">
            <number>5000</number>
+          </property>
+         </widget>
+        </item>
+        <item row="3" column="0">
+         <widget class="QLabel" name="lbWriteMinWaitTime">
+          <property name="text">
+           <string>Wait time [ms]</string>
+          </property>
+          <property name="buddy">
+           <cstring>sbWriteMinWaitTime</cstring>
           </property>
          </widget>
         </item>
