--- a/src/mdttools/mdtPortTerm.ui
+++ b/src/mdttools/mdtPortTerm.ui
@@ -119,15 +119,7 @@
    </layout>
    <zorder>teTerm</zorder>
    <zorder>teCmd</zorder>
-   <zorder>pbSendCmd</zorder>
-   <zorder>horizontalSpacer</zorder>
    <zorder>lbCmd</zorder>
-   <zorder>wCtlWidget</zorder>
-   <zorder>horizontalSpacer</zorder>
-   <zorder>lbTerm</zorder>
-   <zorder>pbClearTerm</zorder>
-   <zorder>horizontalSpacer_2</zorder>
-   <zorder>pbSendCmdAbort</zorder>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
@@ -150,8 +142,14 @@
     </property>
     <addaction name="action_Setup"/>
    </widget>
+   <widget class="QMenu" name="menu_Language">
+    <property name="title">
+     <string>&amp;Language</string>
+    </property>
+   </widget>
    <addaction name="menu_File"/>
    <addaction name="menu_Port"/>
+   <addaction name="menu_Language"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
   <action name="action_Quit">
@@ -162,6 +160,22 @@
   <action name="action_Setup">
    <property name="text">
     <string>&amp;Setup</string>
+   </property>
+  </action>
+  <action name="action_French">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>&amp;French</string>
+   </property>
+  </action>
+  <action name="action_German">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>&amp;German</string>
    </property>
   </action>
  </widget>
