--- a/src/mdttools/mdtPortTerm.ui
+++ b/src/mdttools/mdtPortTerm.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>624</width>
-    <height>466</height>
+    <width>647</width>
+    <height>481</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -64,26 +64,7 @@
      </widget>
     </item>
     <item>
-     <widget class="QPlainTextEdit" name="teCmd">
-      <property name="sizePolicy">
-       <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
-        <horstretch>0</horstretch>
-        <verstretch>0</verstretch>
-       </sizepolicy>
-      </property>
-      <property name="minimumSize">
-       <size>
-        <width>0</width>
-        <height>80</height>
-       </size>
-      </property>
-      <property name="maximumSize">
-       <size>
-        <width>16777215</width>
-        <height>80</height>
-       </size>
-      </property>
-     </widget>
+     <widget class="QLineEdit" name="leCmd"/>
     </item>
     <item>
      <layout class="QHBoxLayout" name="bottomHLayout">
@@ -117,17 +98,14 @@
      </layout>
     </item>
    </layout>
-   <zorder>teTerm</zorder>
-   <zorder>teCmd</zorder>
-   <zorder>lbCmd</zorder>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>624</width>
-     <height>20</height>
+     <width>647</width>
+     <height>23</height>
     </rect>
    </property>
    <widget class="QMenu" name="menu_File">
