--- a/src/mdtport/mdtPortConfigWidget.ui
+++ b/src/mdtport/mdtPortConfigWidget.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>472</width>
-    <height>274</height>
+    <width>447</width>
+    <height>280</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -34,8 +34,8 @@
      </property>
      <property name="sizeHint" stdset="0">
       <size>
-       <width>332</width>
-       <height>20</height>
+       <width>261</width>
+       <height>23</height>
       </size>
      </property>
     </spacer>
@@ -64,8 +64,8 @@
      </property>
      <property name="sizeHint" stdset="0">
       <size>
-       <width>332</width>
-       <height>20</height>
+       <width>261</width>
+       <height>22</height>
       </size>
      </property>
     </spacer>
@@ -77,62 +77,66 @@
        <property name="title">
         <string>Read options</string>
        </property>
-       <layout class="QGridLayout" name="gridLayout_2">
-        <item row="0" column="0">
-         <widget class="QLabel" name="lbReadFrameSize">
-          <property name="text">
-           <string>Frame size</string>
-          </property>
-          <property name="buddy">
-           <cstring>sbReadFrameSize</cstring>
-          </property>
-         </widget>
+       <layout class="QVBoxLayout" name="verticalLayout">
+        <item>
+         <layout class="QFormLayout" name="formLayout">
+          <item row="0" column="0">
+           <widget class="QLabel" name="lbReadFrameSize">
+            <property name="text">
+             <string>Frame size</string>
+            </property>
+            <property name="buddy">
+             <cstring>sbReadFrameSize</cstring>
+            </property>
+           </widget>
+          </item>
+          <item row="0" column="1">
+           <widget class="QSpinBox" name="sbReadFrameSize">
+            <property name="maximum">
+             <number>5000</number>
+            </property>
+           </widget>
+          </item>
+          <item row="1" column="0">
+           <widget class="QLabel" name="lbReadQueueSize">
+            <property name="text">
+             <string>Queue size</string>
+            </property>
+            <property name="buddy">
+             <cstring>sbReadQueueSize</cstring>
+            </property>
+           </widget>
+          </item>
+          <item row="1" column="1">
+           <widget class="QSpinBox" name="sbReadQueueSize">
+            <property name="maximum">
+             <number>500</number>
+            </property>
+           </widget>
+          </item>
+          <item row="2" column="0">
+           <widget class="QLabel" name="lbReadTimeout">
+            <property name="text">
+             <string>Timeout [ms]</string>
+            </property>
+            <property name="buddy">
+             <cstring>sbReadTimeout</cstring>
+            </property>
+           </widget>
+          </item>
+          <item row="2" column="1">
+           <widget class="QSpinBox" name="sbReadTimeout">
+            <property name="minimum">
+             <number>-1</number>
+            </property>
+            <property name="maximum">
+             <number>30000</number>
+            </property>
+           </widget>
+          </item>
+         </layout>
         </item>
-        <item row="0" column="1">
-         <widget class="QSpinBox" name="sbReadFrameSize">
-          <property name="maximum">
-           <number>5000</number>
-          </property>
-         </widget>
-        </item>
-        <item row="1" column="0">
-         <widget class="QLabel" name="lbReadQueueSize">
-          <property name="text">
-           <string>Queue size</string>
-          </property>
-          <property name="buddy">
-           <cstring>sbReadQueueSize</cstring>
-          </property>
-         </widget>
-        </item>
-        <item row="1" column="1">
-         <widget class="QSpinBox" name="sbReadQueueSize">
-          <property name="maximum">
-           <number>500</number>
-          </property>
-         </widget>
-        </item>
-        <item row="2" column="0">
-         <widget class="QLabel" name="lbReadTimeout">
-          <property name="text">
-           <string>Timeout [ms]</string>
-          </property>
-          <property name="buddy">
-           <cstring>sbReadTimeout</cstring>
-          </property>
-         </widget>
-        </item>
-        <item row="2" column="1">
-         <widget class="QSpinBox" name="sbReadTimeout">
-          <property name="minimum">
-           <number>-1</number>
-          </property>
-          <property name="maximum">
-           <number>30000</number>
-          </property>
-         </widget>
-        </item>
-        <item row="3" column="0" colspan="2">
+        <item>
          <widget class="QCheckBox" name="cbUseReadTimeoutProtocol">
           <property name="text">
            <string>Use read timeout protocol</string>
@@ -142,6 +146,19 @@
           </property>
          </widget>
         </item>
+        <item>
+         <spacer name="verticalSpacer">
+          <property name="orientation">
+           <enum>Qt::Vertical</enum>
+          </property>
+          <property name="sizeHint" stdset="0">
+           <size>
+            <width>20</width>
+            <height>55</height>
+           </size>
+          </property>
+         </spacer>
+        </item>
        </layout>
       </widget>
      </item>
@@ -150,107 +167,124 @@
        <property name="title">
         <string>Write options</string>
        </property>
-       <layout class="QGridLayout" name="gridLayout">
-        <item row="0" column="0">
-         <widget class="QLabel" name="lbWriteFrameSize">
-          <property name="text">
-           <string>Frame size</string>
-          </property>
-          <property name="buddy">
-           <cstring>sbWriteFrameSize</cstring>
-          </property>
-         </widget>
+       <layout class="QVBoxLayout" name="verticalLayout_2">
+        <item>
+         <layout class="QFormLayout" name="formLayout_2">
+          <item row="0" column="0">
+           <widget class="QLabel" name="lbWriteFrameSize">
+            <property name="text">
+             <string>Frame size</string>
+            </property>
+            <property name="buddy">
+             <cstring>sbWriteFrameSize</cstring>
+            </property>
+           </widget>
+          </item>
+          <item row="0" column="1">
+           <widget class="QSpinBox" name="sbWriteFrameSize">
+            <property name="maximum">
+             <number>5000</number>
+            </property>
+           </widget>
+          </item>
+          <item row="1" column="0">
+           <widget class="QLabel" name="lbWriteQueueSize">
+            <property name="text">
+             <string>Queue size</string>
+            </property>
+            <property name="buddy">
+             <cstring>sbWriteQueueSize</cstring>
+            </property>
+           </widget>
+          </item>
+          <item row="1" column="1">
+           <widget class="QSpinBox" name="sbWriteQueueSize">
+            <property name="maximum">
+             <number>500</number>
+            </property>
+           </widget>
+          </item>
+          <item row="2" column="0">
+           <widget class="QLabel" name="lbWriteTimeout">
+            <property name="text">
+             <string>Timeout [ms]</string>
+            </property>
+            <property name="buddy">
+             <cstring>sbWriteTimeout</cstring>
+            </property>
+           </widget>
+          </item>
+          <item row="2" column="1">
+           <widget class="QSpinBox" name="sbWriteTimeout">
+            <property name="minimum">
+             <number>-1</number>
+            </property>
+            <property name="maximum">
+             <number>30000</number>
+            </property>
+           </widget>
+          </item>
+          <item row="3" column="0">
+           <widget class="QLabel" name="lbWriteMinWaitTime">
+            <property name="text">
+             <string>Wait time [ms]</string>
+            </property>
+            <property name="buddy">
+             <cstring>sbWriteMinWaitTime</cstring>
+            </property>
+           </widget>
+          </item>
+          <item row="3" column="1">
+           <widget class="QSpinBox" name="sbWriteMinWaitTime">
+            <property name="toolTip">
+             <string>Time to wait before sending a byte if &quot;Write byte per byte&quot; option is set.</string>
+            </property>
+            <property name="maximum">
+             <number>5000</number>
+            </property>
+           </widget>
+          </item>
+          <item row="4" column="0">
+           <widget class="QLabel" name="lbWriteInterframeTime">
+            <property name="text">
+             <string>Inter frame time [ms]</string>
+            </property>
+            <property name="buddy">
+             <cstring>sbWriteInterframeTime</cstring>
+            </property>
+           </widget>
+          </item>
+          <item row="4" column="1">
+           <widget class="QSpinBox" name="sbWriteInterframeTime">
+            <property name="toolTip">
+             <string/>
+            </property>
+            <property name="maximum">
+             <number>5000</number>
+            </property>
+           </widget>
+          </item>
+         </layout>
         </item>
-        <item row="0" column="1">
-         <widget class="QSpinBox" name="sbWriteFrameSize">
-          <property name="maximum">
-           <number>5000</number>
-          </property>
-         </widget>
-        </item>
-        <item row="1" column="0">
-         <widget class="QLabel" name="lbWriteQueueSize">
-          <property name="text">
-           <string>Queue size</string>
-          </property>
-          <property name="buddy">
-           <cstring>sbWriteQueueSize</cstring>
-          </property>
-         </widget>
-        </item>
-        <item row="1" column="1">
-         <widget class="QSpinBox" name="sbWriteQueueSize">
-          <property name="maximum">
-           <number>500</number>
-          </property>
-         </widget>
-        </item>
-        <item row="2" column="0">
-         <widget class="QLabel" name="lbWriteTimeout">
-          <property name="text">
-           <string>Timeout [ms]</string>
-          </property>
-          <property name="buddy">
-           <cstring>sbWriteTimeout</cstring>
-          </property>
-         </widget>
-        </item>
-        <item row="2" column="1">
-         <widget class="QSpinBox" name="sbWriteTimeout">
-          <property name="minimum">
-           <number>-1</number>
-          </property>
-          <property name="maximum">
-           <number>30000</number>
-          </property>
-         </widget>
-        </item>
-        <item row="3" column="0" colspan="2">
+        <item>
          <widget class="QCheckBox" name="cbBytePerByteWrite">
           <property name="text">
            <string>Write byte per byte</string>
           </property>
          </widget>
         </item>
-        <item row="4" column="0">
-         <widget class="QLabel" name="lbWriteMinWaitTime">
-          <property name="text">
-           <string>Wait time [ms]</string>
+        <item>
+         <spacer name="verticalSpacer_2">
+          <property name="orientation">
+           <enum>Qt::Vertical</enum>
           </property>
-          <property name="buddy">
-           <cstring>sbWriteMinWaitTime</cstring>
+          <property name="sizeHint" stdset="0">
+           <size>
+            <width>20</width>
+            <height>0</height>
+           </size>
           </property>
-         </widget>
-        </item>
-        <item row="4" column="1">
-         <widget class="QSpinBox" name="sbWriteMinWaitTime">
-          <property name="toolTip">
-           <string>Time to wait before sending a byte if &quot;Write byte per byte&quot; option is set.</string>
-          </property>
-          <property name="maximum">
-           <number>5000</number>
-          </property>
-         </widget>
-        </item>
-        <item row="5" column="0">
-         <widget class="QLabel" name="lbWriteInterframeTime">
-          <property name="text">
-           <string>Inter frame time [ms]</string>
-          </property>
-          <property name="buddy">
-           <cstring>sbWriteInterframeTime</cstring>
-          </property>
-         </widget>
-        </item>
-        <item row="5" column="1">
-         <widget class="QSpinBox" name="sbWriteInterframeTime">
-          <property name="toolTip">
-           <string/>
-          </property>
-          <property name="maximum">
-           <number>5000</number>
-          </property>
-         </widget>
+         </spacer>
         </item>
        </layout>
       </widget>
@@ -269,9 +303,9 @@
   <tabstop>sbWriteFrameSize</tabstop>
   <tabstop>sbWriteQueueSize</tabstop>
   <tabstop>sbWriteTimeout</tabstop>
-  <tabstop>cbBytePerByteWrite</tabstop>
   <tabstop>sbWriteMinWaitTime</tabstop>
   <tabstop>sbWriteInterframeTime</tabstop>
+  <tabstop>cbBytePerByteWrite</tabstop>
  </tabstops>
  <resources/>
  <connections/>
