Working on MODBUS/TCP
 - Created new MODBUS/TCP setup dialog (not functionnal for the moment)
 - Moved some methods from device -> port manager
 - Little bug corrections (but still have known bugs)

--- a/src/mdttools/mdtModbusIoTool.ui
+++ b/src/mdttools/mdtModbusIoTool.ui
@@ -47,6 +47,7 @@
     <property name="title">
      <string>&amp;File</string>
     </property>
+    <addaction name="action_Setup"/>
     <addaction name="action_Quit"/>
    </widget>
    <widget class="QMenu" name="menu_Language">
@@ -61,6 +62,11 @@
   <action name="action_Quit">
    <property name="text">
     <string>&amp;Quit</string>
+   </property>
+  </action>
+  <action name="action_Setup">
+   <property name="text">
+    <string>&amp;Setup</string>
    </property>
   </action>
  </widget>
