--- a/src/mdtutilsgui/mdtItemsSelectorDialog.ui
+++ b/src/mdtutilsgui/mdtItemsSelectorDialog.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>775</width>
-    <height>357</height>
+    <width>838</width>
+    <height>361</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -56,6 +56,13 @@
           <widget class="QPushButton" name="pbUp">
            <property name="text">
             <string>Up</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QPushButton" name="pbTop">
+           <property name="text">
+            <string>Top</string>
            </property>
           </widget>
          </item>
