--- a/tools/mdtcablelist/src/mdtClLinkEditor.ui
+++ b/tools/mdtcablelist/src/mdtClLinkEditor.ui
@@ -19,14 +19,14 @@
      <item>
       <layout class="QFormLayout" name="formLayout">
        <item row="0" column="0">
-        <widget class="QLabel" name="lbIdentification">
+        <widget class="QLabel" name="lbIdentification_FK">
          <property name="text">
           <string>Identification</string>
          </property>
         </widget>
        </item>
        <item row="0" column="1">
-        <widget class="QLineEdit" name="fld_Identification"/>
+        <widget class="QLineEdit" name="fld_Identification_FK"/>
        </item>
        <item row="1" column="0">
         <widget class="QLabel" name="lbVersion">
