--- a/tools/mdtcablelist/src/mdtClArticleLinkDialog.ui
+++ b/tools/mdtcablelist/src/mdtClArticleLinkDialog.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>468</width>
-    <height>241</height>
+    <height>242</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -34,7 +34,18 @@
       </widget>
      </item>
      <item row="1" column="1">
-      <widget class="QComboBox" name="cbLinkDirection"/>
+      <layout class="QHBoxLayout" name="horizontalLayout_3">
+       <item>
+        <widget class="QComboBox" name="cbLinkDirection"/>
+       </item>
+       <item>
+        <widget class="QLabel" name="lbLinkDirectionAsciiPicture">
+         <property name="text">
+          <string>----</string>
+         </property>
+        </widget>
+       </item>
+      </layout>
      </item>
      <item row="2" column="0">
       <widget class="QLabel" name="lbValue">
@@ -46,7 +57,7 @@
      <item row="2" column="1">
       <layout class="QHBoxLayout" name="horizontalLayout">
        <item>
-        <widget class="QDoubleSpinBox" name="doubleSpinBox">
+        <widget class="QDoubleSpinBox" name="sbValue">
          <property name="maximum">
           <double>9999999.000000000000000</double>
          </property>
