--- a/tools/mdtcablelist/src/mdtClUnitEditor.ui
+++ b/tools/mdtcablelist/src/mdtClUnitEditor.ui
@@ -91,7 +91,7 @@
       <item row="0" column="1">
        <layout class="QHBoxLayout" name="horizontalLayout">
         <item>
-         <widget class="QLineEdit" name="LeArticle_Id_FK">
+         <widget class="QLineEdit" name="leArticle_Id_FK">
           <property name="enabled">
            <bool>false</bool>
           </property>
