--- a/tools/mdtcablelist/src/mdtClUnitLinkDialog.ui
+++ b/tools/mdtcablelist/src/mdtClUnitLinkDialog.ui
@@ -46,7 +46,11 @@
         </widget>
        </item>
        <item row="2" column="1">
-        <widget class="QComboBox" name="cbSinceVersion"/>
+        <widget class="QComboBox" name="cbSinceVersion">
+         <property name="editable">
+          <bool>true</bool>
+         </property>
+        </widget>
        </item>
       </layout>
      </item>
